--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,11 +19,6 @@ jobs:
     - name: Docker-build it
       working-directory: ${{ env.WORKDIR }}
       run: |
-        docker build .
-
-    - name: Docker-push it
-      working-directory: ${{ env.WORKDIR }}
-      run: |
         echo ${{ secrets.DOCKERHUB }} | docker login -u qrkot --password-stdin
-        docker push qrkot/helmsec-bundle:latest
+        docker build -t qrkot/helmsec-bundle:latest .
         docker logout
