--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,13 +13,19 @@ jobs:
     
     steps:
 
-    - name: Check it out
+    - name: Checkout it out
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Check out Helm Secrets
       run: git clone ${{ env.HS_REPO }} ${{ env.WORKDIR }}
 
     - name: Docker-build it
-      working-directory: ${{ env.WORKDIR }}
+#      working-directory: ${{ env.WORKDIR }}
       run: |
-        echo ${{ secrets.DOCKERHUB }} | docker login -u ${{ secrets.DOCKERHUB_USER }} --password-stdin
-        docker build -t qrkot/helmsec-bundle:latest .
-        docker push ${{ secrets.DOCKERHUB_USER }}/helmsec-bundle
-        docker logout
+        docker build .
+#        echo ${{ secrets.DOCKERHUB }} | docker login -u ${{ secrets.DOCKERHUB_USER }} --password-stdin
+#        docker build -t qrkot/helmsec-bundle:latest .
+#        docker push ${{ secrets.DOCKERHUB_USER }}/helmsec-bundle
+#       docker logout
