--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ on:
   
 env:
   HS_REPO: https://github.com/jkroepke/helm-secrets.git
-  WORKDIR: hs
+  WORKDIR: helmsec
   
 jobs:
   build:
@@ -22,7 +22,6 @@ jobs:
       run: git clone ${{ env.HS_REPO }} ${{ env.WORKDIR }}
 
     - name: Docker-build it
-#      working-directory: ${{ env.WORKDIR }}
       run: |
         docker build .
 #        echo ${{ secrets.DOCKERHUB }} | docker login -u ${{ secrets.DOCKERHUB_USER }} --password-stdin
